# edgegrid-forecast-engine

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  Makefile  PROGRESS.md  README.md  ROADMAP.md  docker-compose.yml  pyproject.toml
benchmarks/: _s3_batch.py  _s3_fc_only.py  _s3_metrics.py  _s3_one_meter.py  _s3_smoke.py  _s3_train_only.py  block_accuracy_backfill.py  build_strategy2_engine.py  build_v4_ensemble_engine.py  forward_forecast_apr_may.py  forward_forecast_multi_strategy.py  forward_v5_feb12_strategies.py  gap_forecast_feb_apr.py  generate_s2_v4_dashboard_data.py  s3_rolling_origin.py  v5_benchmark_s1.py  v5_benchmark_s2.py  v5_benchmark_s3.py  v5_recursive_backtest.py  v5_retrain_one.py
deploy/: edgegrid-forecast.service
docs/: CHRONOS_ENSEMBLE_EVALUATION.md  FOUNDATION.md  ROADMAP_TO_OUTCOME.md  S3_ROLLING_ORIGIN_PROTOCOL.md  SESSION_12_PROGRESS.md  STATE_OF_THE_ENGINE.md  STRATEGY_1_CHRONOLOGICAL_CUTOFF.md  STRATEGY_2_STRATIFIED_TEMPORAL.md  TRUTH_BOARD_5PCT_REACHABILITY.md  V4_ENGINE_ARCHITECTURE.md  V5_CEA_ALIGNMENT.md  V5_RELEASE.md  v4_engine_teardown.md  v5_plan_mape_below_5.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
notebooks/: sprint_pipeline.py
outputs/: _generated_at.txt  block_accuracy_backfill.parquet  block_accuracy_cohort.csv  block_accuracy_dashboard.html  block_accuracy_fleet.csv  block_accuracy_summary.csv  continuous_history_viewer.html  forward_forecast_30d.parquet  forward_forecast_README.md  forward_forecast_all_strategies.parquet  forward_forecast_dam_15min.parquet  forward_forecast_viewer.html  (+6 more)
(+297 files in other folders)
